// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextualBody /> renders formatted m.text correctly linkification is not applied to code blocks 1`] = `
<span
  class="mx_EventTile_body markdown-body"
  dir="auto"
>
  <p>
    Visit 
    <code>
      https://matrix.org/
    </code>
  </p>
  

  <div
    class="mx_EventTile_pre_container"
  >
    <pre
      class="mx_EventTile_collapsedCodeBlock"
    >
      <span
        class="mx_EventTile_lineNumbers"
      >
        <span>
          1
        </span>
      </span>
      <code>
        https://matrix.org/

      </code>
      <span />
    </pre>
    <span
      class="mx_EventTile_button mx_EventTile_copyButton "
    />
  </div>
  

</span>
`;

exports[`<TextualBody /> renders formatted m.text correctly pills do not appear in code blocks 1`] = `
<span
  class="mx_EventTile_body markdown-body"
  dir="auto"
>
  <p>
    <code>
      @room
    </code>
  </p>
  

  <div
    class="mx_EventTile_pre_container"
  >
    <pre
      class="mx_EventTile_collapsedCodeBlock"
    >
      <span
        class="mx_EventTile_lineNumbers"
      >
        <span>
          1
        </span>
      </span>
      <code>
        @room

      </code>
      <span />
    </pre>
    <span
      class="mx_EventTile_button mx_EventTile_copyButton "
    />
  </div>
  

</span>
`;

exports[`<TextualBody /> renders formatted m.text correctly pills get injected correctly into the DOM 1`] = `
<span
  class="mx_EventTile_body markdown-body"
  dir="auto"
>
  Hey 
  <span>
    <bdi>
      <a
        class="mx_Pill mx_UserPill"
        href="https://matrix.to/#/@user:server"
      >
        <img
          alt=""
          aria-hidden="true"
          class="mx_BaseAvatar mx_BaseAvatar_image"
          data-testid="avatar-img"
          src="mxc://avatar.url/image.png"
          style="width: 16px; height: 16px;"
        />
        <span
          class="mx_Pill_linkText"
        >
          Member
        </span>
      </a>
    </bdi>
  </span>
</span>
`;
